--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1971,7 +1971,7 @@ button,
     top: 0;
     width: 6em;
     z-index: 10000; }
-    #sidebar .toggle:before {
+    #sidebar .toggle::before {
       -moz-osx-font-smoothing: grayscale;
       -webkit-font-smoothing: antialiased;
       display: inline-block;
@@ -1982,7 +1982,7 @@ button,
       text-transform: none !important;
       font-family: 'Inconsolata';
       font-weight: 900; }
-    #sidebar .toggle:before {
+    #sidebar .toggle::before {
       content: '\f0c9';
       font-size: 2rem;
       height: inherit;
@@ -2010,7 +2010,7 @@ button,
         line-height: 6.25em;
         text-indent: 5em;
         width: 5em; }
-        #sidebar .toggle:before {
+        #sidebar .toggle::before {
           font-size: 1.5rem; }
       #sidebar.inactive {
         margin-left: -24em; } }
