--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,7 +20,7 @@ footer, header, hgroup, menu, nav, output, ruby,section, summary, time, mark, au
   vertical-align: baseline; }
 
 p {
-  font-size: 150%;
+  font-size: 1.5rem;
 }
 
 article, aside, details, figcaption, figure,
