--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -997,7 +997,7 @@ header p {
   text-transform: uppercase; }
 
 header.major > :last-child {
-  border-bottom: solid 3px #373b52;
+  border-bottom: solid 3px #292c2f;
   display: inline-block;
   margin: 0 0 2em 0;
   padding: 0 0.75em 0.5em 0; }
