--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1860,7 +1860,7 @@ button,
     max-width: 110em; }
     #main > .inner > section {
       padding: 6em 0 4em 0 ;
-      border-top: solid 2px #373b52; }
+      border-top: solid 2px #292c2f; }
       #main > .inner > section:first-of-type {
         border-top: 0 !important; }
   @media screen and (max-width: 1680px) {
@@ -1939,7 +1939,7 @@ button,
     position: relative;
     width: 26em; }
     #sidebar > .inner > * {
-      border-bottom: solid 2px #373b52;
+      border-bottom: solid 2px #292c2f;
       margin: 0 0 3.5em 0;
       padding: 0 0 3.5em 0; }
       #sidebar > .inner > * > :last-child {
