--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2239,7 +2239,7 @@ button,
         -webkit-transition: color 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
         -ms-transition: color 0.2s ease-in-out, -ms-transform 0.2s ease-in-out;
         transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
-        color: #9fa3a6;
+        color: #494c4e;
         content: '\f078';
         position: absolute;
         right: 0; }
@@ -2261,14 +2261,13 @@ button,
     color: #4e5052;
     display: none;
     margin: 0.5em 0 1.5em 0;
+    padding-left: 1em;
   }
-  #menu > ul > li > ul:hover {
+  #menu > ul > li:hover {
     color: #b9bec3;
     text-transform: lowercase;
     text-shadow: 0 0 5px #6e6a75;
-    
-  }
-    padding-left: 1em; }
+ }
     #menu > ul > li > ul a, #menu > ul > li > ul span {
       font-size: 0.8em; }
     #menu > ul > li > ul > li {
