--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2184,7 +2184,9 @@ button,
   @media screen and (orientation: portrait) and (max-width: 480px) {
     #banner .image {
       max-height: 35vh; } }
-
+#footer {
+    z-index: 1000;
+}
 /* Footer */
 #footer .copyright {
   color: #9fa3a6;
